--- a/index.html
+++ b/index.html
@@ -7,26 +7,28 @@
   </head>
   <body>
     <header>
-      <a href="">webstudio</a>
+      <a href="./index.html">webstudio</a>
       <!-- navigation -->
       <nav>
         <ul>
-          <li><a href="">studio</a></li>
-          <li><a href="">portfolio</a></li>
-          <li><a href="">contacts</a></li>
+          <li><a href="#studio">studio</a></li>
+          <li><a href="#portfolio">portfolio</a></li>
+          <li><a href="#contacts">contacts</a></li>
         </ul>
       </nav>
       <!-- adress and phone number -->
-      <ul>
-        <li>info@devstudio.com</li>
-        <li>+11 (000) 111-11-11</li>
-      </ul>
+      <address>
+        <ul>
+          <li>info@devstudio.com</li>
+          <li>+11 (000) 111-11-11</li>
+        </ul>
+      </address>
     </header>
     <main>
       <!-- hero -->
       <section>
-      </section><h1>Effective Solutions for Your Business</h1>
-      <button type="button">Order Service</button>
+        <h1>Effective Solutions for Your Business</h1>
+        <button type="button">Order Service</button>
       </section>
       <!-- Feature -->
       <section>
@@ -42,8 +44,8 @@
           <li>
             <h3>Punctuality</h3>
             <p>
-              Bring the key message to the brand audience for the best price within
-              the shortest possible time.
+              Bring the key message to the brand audience for the best price
+              within the shortest possible time.
             </p>
           </li>
           <li>
@@ -56,46 +58,45 @@
           <li>
             <h3>Technologies</h3>
             <p>
-              Design practice focused on digital experiences. We bring forth a deep
-              passion for problem-solving.
+              Design practice focused on digital experiences. We bring forth a
+              deep passion for problem-solving.
             </p>
           </li>
         </ul>
-      </section> 
-           <!--team-->
+      </section>
+      <!--team-->
       <section>
         <h2>Our Team</h2>
         <ul>
-            <li>
-                <img src="images/team_1.jpg" alt="Product Designer" width="264">
-                <h3>Mark Guerrero</h3>
-                <p>Product Designer</p>
-            </li>
-            <li>
-                <img src="images/team_2.jpg" alt="Frontend Developer"width="264">
-                <h3>Tom Ford </h3>
-                <p>Frontend Developer</p>
-            </li>
-            <li>
-                <img src="images/team_3.jpg" alt="Marketing"width="264">
-                <h3>Camila Garcia</h3>
-                <p>Marketing</p>
-            </li>
-            <li>
-                <img src="images/team_4.jpg" alt="UI Designer"width="264">
-                <h3>Daniel Wilson
-                    </h3>
-                <p>UI Designer</p>
-            </li>
+          <li>
+            <img src="images/team_1.jpg" alt="Product Designer" width="264" />
+            <h3>Mark Guerrero</h3>
+            <p>Product Designer</p>
+          </li>
+          <li>
+            <img src="images/team_2.jpg" alt="Frontend Developer" width="264" />
+            <h3>Tom Ford</h3>
+            <p>Frontend Developer</p>
+          </li>
+          <li>
+            <img src="images/team_3.jpg" alt="Marketing" width="264" />
+            <h3>Camila Garcia</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img src="images/team_4.jpg" alt="UI Designer" width="264" />
+            <h3>Daniel Wilson</h3>
+            <p>UI Designer</p>
+          </li>
         </ul>
       </section>
-      
     </main>
-    <footer><a href="./index.html">webstudio</a>
-        <p>
-          Increase the flow of customers and sales for your business with digital
-          marketing & growth solutions.
-        </p>
+    <footer>
+      <a href="./index.html">webstudio</a>
+      <p>
+        Increase the flow of customers and sales for your business with digital
+        marketing & growth solutions.
+      </p>
     </footer>
   </body>
 </html>
