--- a/index.html
+++ b/index.html
@@ -7,20 +7,19 @@
   </head>
   <body>
     <header>
-      <a href="./index.html">webstudio</a>
-      <!-- navigation -->
+      <a href="./index.html">Webstudio</a>
       <nav>
         <ul>
-          <li><a href="#studio">studio</a></li>
-          <li><a href="#portfolio">portfolio</a></li>
-          <li><a href="#contacts">contacts</a></li>
+          <li><a href="#">studio</a></li>
+          <li><a href="#">portfolio</a></li>
+          <li><a href="#">contacts</a></li>
         </ul>
       </nav>
       <!-- adress and phone number -->
       <address>
         <ul>
-          <li>info@devstudio.com</li>
-          <li>+11 (000) 111-11-11</li>
+          <li><a href="info@devstudio.com">info@devstudio.com</a></li>
+          <li><a href="+11 (000) 111-11-11">+11 (000) 111-11-11</a></li>
         </ul>
       </address>
     </header>
@@ -69,22 +68,38 @@
         <h2>Our Team</h2>
         <ul>
           <li>
-            <img src="images/team_1.jpg" alt="Product Designer" width="264" />
+            <img
+              src="images/team_1.jpg"
+              alt="Mark Guerrero, Product Designer"
+              width="264"
+            />
             <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
           </li>
           <li>
-            <img src="images/team_2.jpg" alt="Frontend Developer" width="264" />
+            <img
+              src="images/team_2.jpg"
+              alt="Tom Ford, Frontend Developer"
+              width="264"
+            />
             <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
-            <img src="images/team_3.jpg" alt="Marketing" width="264" />
+            <img
+              src="images/team_3.jpg"
+              alt="Camila Garcia, Marketing"
+              width="264"
+            />
             <h3>Camila Garcia</h3>
             <p>Marketing</p>
           </li>
           <li>
-            <img src="images/team_4.jpg" alt="UI Designer" width="264" />
+            <img
+              src="images/team_4.jpg"
+              alt="Daniel Wilson, UI Designer"
+              width="264"
+            />
             <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
           </li>
@@ -92,7 +107,7 @@
       </section>
     </main>
     <footer>
-      <a href="./index.html">webstudio</a>
+      <a href="./index.html">WebStudio</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
