--- a/index.html
+++ b/index.html
@@ -7,19 +7,19 @@
   </head>
   <body>
     <header>
-      <a href="./index.html">Webstudio</a>
+      <a href="./index.html">WebStudio</a>
       <nav>
         <ul>
-          <li><a href="#">studio</a></li>
-          <li><a href="#">portfolio</a></li>
-          <li><a href="#">contacts</a></li>
+          <li><a href="#">Studio</a></li>
+          <li><a href="#">Portfolio</a></li>
+          <li><a href="#">Contacts</a></li>
         </ul>
       </nav>
       <!-- adress and phone number -->
       <address>
         <ul>
-          <li><a href="info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="+11000111-11-11">+11 (000) 111-11-11</a></li>
+          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
         </ul>
       </address>
     </header>
@@ -36,14 +36,14 @@
           <li>
             <h3>Strategy</h3>
             <p>
-              Our goal is to identify the business problem to work away with the
+              Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li>
             <h3>Punctuality</h3>
             <p>
-              Bring the key message to the brand audience for the best price
+              Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
