--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   </head>
   <body>
     <header>
-      <a href="./index.html">WebStudio</a>
       <nav>
         <ul>
+          <a href="./index.html">WebStudio</a>
           <li><a href="#">Studio</a></li>
           <li><a href="#">Portfolio</a></li>
           <li><a href="#">Contacts</a></li>
@@ -69,7 +69,7 @@
         <ul>
           <li>
             <img
-              src="images/team_1.jpg"
+              src="/images/team_1.jpg"
               alt="Mark Guerrero, Product Designer"
               width="264"
             />
@@ -78,7 +78,7 @@
           </li>
           <li>
             <img
-              src="images/team_2.jpg"
+              src="/images/team_2.jpg"
               alt="Tom Ford, Frontend Developer"
               width="264"
             />
@@ -87,7 +87,7 @@
           </li>
           <li>
             <img
-              src="images/team_3.jpg"
+              src="/images/team_3.jpg"
               alt="Camila Garcia, Marketing"
               width="264"
             />
@@ -96,7 +96,7 @@
           </li>
           <li>
             <img
-              src="images/team_4.jpg"
+              src="/images/team_4.jpg"
               alt="Daniel Wilson, UI Designer"
               width="264"
             />
