--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <ul>
           <li>
             <img
-              src="/images/team_1.jpg"
+              src="./images/team_1.jpg"
               alt="Mark Guerrero, Product Designer"
               width="264"
             />
@@ -79,7 +79,7 @@
           </li>
           <li>
             <img
-              src="/images/team_2.jpg"
+              src="./images/team_2.jpg"
               alt="Tom Ford, Frontend Developer"
               width="264"
             />
@@ -88,7 +88,7 @@
           </li>
           <li>
             <img
-              src="/images/team_3.jpg"
+              src="./images/team_3.jpg"
               alt="Camila Garcia, Marketing"
               width="264"
             />
@@ -97,7 +97,7 @@
           </li>
           <li>
             <img
-              src="/images/team_4.jpg"
+              src="./images/team_4.jpg"
               alt="Daniel Wilson, UI Designer"
               width="264"
             />
